Fixed layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,11 @@ code {
   max-width: 1100px;
   min-height: 300px;
   color: #000;
-  position: relative;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   line-height: 1.7;
   font-weight: 400;
   display: flex;
@@ -59,7 +63,10 @@ code {
 .editorShell .editor-container {
   background: #fff;
   position: relative;
-  display: block;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -76,6 +83,7 @@ code {
 .editorScroller {
   min-height: 150px;
   border: 0;
+  flex-grow: 1;
   display: flex;
   position: relative;
   outline: 0;
